Minor reorganization of where the chat templates are being called to avoid squashing the canvas at smaller resolutions...see @nathanlambert

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -243,12 +243,10 @@ a:hover {
 
 //--------------------------- Chat ---------------------------// 
 .chat {
-	position: absolute;
-	right: 0;
-	top: 100px;
+	display:inline-block;
+	vertical-align:top;
 	width: 200px;
 	height: 1000px;
-	border: 1px solid lightgray;
 	background: #fff;
 }
 
